objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <label>EmployeeID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Quit</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Contact_Only</fullName>
                    <default>true</default>
                    <label>Contact Only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailing 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailing 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailing 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Notes__c</fullName>
        <label>Relationship Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Employee Title</description>
        <inlineHelpText>Employee Title</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
</CustomObject>